<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_Name"
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/userName_textView"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/submit_First_name"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint" />
    <EditText
        android:id="@+id/submit_Last_name"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint" />

    <TextView
        android:id="@+id/tickets"
        android:layout_width="378dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/number_of_tickets"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="@string/hint_num_tickets" />

    <TextView
        android:id="@+id/totalView"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:layout_marginTop="0dp"
        android:text="@string/total_cost"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/total_cost_cal"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:textSize="20dp"
        android:importantForAutofill="no"
        android:text="0" />

    <Button
        android:id="@+id/cal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:onClick="calculateClick"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/time"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/time"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/time_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/early_time_radio_button"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/late_time_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="30dp"
            android:padding="0dp"
            android:checked="false"
            android:text="" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:text="Submit" />

</LinearLayout>
